# PioneerLib

./: .gitignore  CMakeLists.txt  CMakeSources.cmake  Doxyfile  Makefile  README.md
.github/workflows/: ci.yml
include/container/: Either.h
include/core/: Exception.h  Logger.h
src/container/: Either.cpp
src/core/: Exception.cpp  Logger.cpp
test/core/: Logger.cpp
